# AI-Boardroom

./: AI Boardroom Master Project.docx  Backend folder structure.txt  Untitled.txt  jwt handler previous.txt
backend-fixed/backend-fixed/: .env  .env.example  ai_boardroom.db  celery_app.py  docker-compose.yml  pyproject.toml  requirements.txt
backend-fixed/backend-fixed/app/: main.py
backend-fixed/backend-fixed/app/agents/: base.py  ceo.py
backend-fixed/backend-fixed/app/ai/: __init__.py  llm.py  structured_outputs.py  tools.py
backend-fixed/backend-fixed/app/api/: __init__.py
backend-fixed/backend-fixed/app/auth/: oauth.py  repository.py  router.py  service.py
backend-fixed/backend-fixed/app/core/: config.py  constants.py  dependencies.py  exceptions.py  logging.py  redis.py  security.py
backend-fixed/backend-fixed/app/database/: postgres.py  seed.py  session.py
backend-fixed/backend-fixed/app/memory/: agent_memory.py  project_memory.py  session_memory.py  shared_memory.py
backend-fixed/backend-fixed/app/notifications/: __init__.py  models.py  router.py  schemas.py  service.py
backend-fixed/backend-fixed/app/orchestrator/: __init__.py  graph.py  nodes.py  runner.py  state.py
backend-fixed/backend-fixed/app/projects/: models.py  schemas.py  service.py
backend-fixed/backend-fixed/app/rag/: context.py  embeddings.py  reranker.py  retriever.py  vector_store.py
backend-fixed/backend-fixed/app/reports/: __init__.py  models.py  repository.py  router.py  service.py
backend-fixed/backend-fixed/app/sessions/: models.py  router.py  service.py
(+139 files in other folders)
